# IEMidi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  info.plist
Application/: CMakeLists.txt  main.cpp
Include/: IECore.h  IEMidi.h  IEMidiEditor.h  IEMidiMapper.h  IEMidiParameter.h  IEMidiProcessor.h  IEMidiProfileManager.h  IEMidiTypes.h  IERenderer.h  IEUtils.h
Include/IEActions/: IEAction.h
Include/IEActions/Implementation/: IEAction_Impl_Apple.h  IEAction_Impl_Win.h
Include/IECore/: IECore.h  IERenderer.h  IEUtils.h
Include/IEExtensions/: ie.imgui.h  imgui_IE.h
Settings/: IEMidiMapper_ImGui.ini
Source/: CMakeLists.txt  IECore.cpp  IEMidi.cpp  IEMidi.h  IEMidiEditor.cpp  IEMidiEditor.h  IEMidiMapper.cpp  IEMidiParameter.cpp  IEMidiProcessor.cpp  IEMidiProcessor.h  IEMidiProfileManager.cpp  IEMidiProfileManager.h  IEMidiTypes.h  IERenderer.cpp  IEUtils.cpp  main.cpp
Source/IEActions/: IEAction.cpp
Source/IEActions/Implementation/: IEAction_Impl_Apple.cpp  IEAction_Impl_Win.cpp
Source/IECore/: IEAppleApp.mm  IECore.cpp  IERenderer.cpp  IEUtils.cpp
Source/IECore/Implementation/: IEApple.mm  IEAppleStatusItem.mm  IEWin32.cpp  IEWin32TrayIcon.cpp
Source/IEExtensions/: ie.imgui.cpp  imgui_IE.cpp
Win/: IEMidiMapper.sln  IEMidiMapper.vcxproj  IEMidiMapper.vcxproj.filters
